src/test/deca/lexicographie/valid/sansObjet/valid_float.deca
{
    float x =0.0f;
    float x = 123.25F;
    float float_limit_max = 3.4028235E38
    float float_limit_min= 1.4E-45;

}