src/test/deca/lexicographie/invalid/sansObjet/invalid_caracter12.deca
{
    float x = 0.3;
    println("Hello");
    รง
}